--- a/project-v1.0.0/package.json
+++ b/project-v1.0.0/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
     "react": "^17.0.1",
+    "react-data-table-component": "^6.11.7",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
