--- a/project-v1.0.0/package.json
+++ b/project-v1.0.0/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "4.0.3",
     "sass": "^1.32.8",
     "semantic-ui-css": "^2.4.1",
+    "semantic-ui-loader": "^2.3.1",
     "semantic-ui-react": "^2.0.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0"
