--- a/project-v1.0.0/frontend/package.json
+++ b/project-v1.0.0/frontend/package.json
@@ -11,6 +11,7 @@
     "react-data-table-component": "^6.11.7",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.32.8",
